# data_science-repo

./: README.md
jobscraping/: .pre-commit-config.yaml  README.md  monkeytype.sqlite3  pyproject.toml
jobscraping/data/: most_frequent.csv
jobscraping/data/bronze/: failed_scrapers.csv  jobs.csv
jobscraping/notebooks/: analysis.ipynb  display_jobs.ipynb  one_job.html  scrape_jobs.ipynb
jobscraping/src/: data_loader.py  transformers.py  utils.py
jobscraping/src/scrapers/: abstract_scraper.py  afry_scraper.py  aliant_scraper.py  asociety_scraper.py  cinode_scraper.py  combitech_scraper.py  emagine_scraper.py  ework_scraper.py  itcnetwork_scraper.py  nikita_scraper.py  profinder_scraper.py  regent_scraper.py  senterprise_scraper.py  sigma_scraper.py  tingent_scraper.py  upgraded_scraper.py
myroot/: requirements.txt
old/: .gitignore  setup.py
training/: .gitignore  README.md  pyproject.toml
training/data/: most_frequent.csv  sorted_ads.csv
training/data/bronze/: jobs.csv
training/data/raw/: jobs.csv
training/notebooks/: display_jobs.ipynb  jobscreaping.ipynb  most_frequent.csv  test.ipynb
training/src/: abstract_scraper.py  afry_scraper.py  aliant_scraper.py  asociety_scraper.py  combitech_scraper.py  data_loader.py  emagine_scraper.py  ework_scraper.py  nikita_scraper.py  regent_scraper.py  upgraded_scraper.py  utils.py
training/src/scrapers/: abstract_scraper.py  afry_scraper.py  aliant_scraper.py  asociety_scraper.py  combitech_scraper.py  emagine_scraper.py  ework_scraper.py  nikita_scraper.py  regent_scraper.py  upgraded_scraper.py
(+8 files in other folders)
