[project]
name = "my-ml-project"
version = "0.1.0"
description = "Personal machine learning project for training purposes. "
authors = [
    { name = "Mimmi", email = "mimmi@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "scikit-learn",
    "jupyter",
    "matplotlib",
    "seaborn",
    "ipykernel (>=6.30.1,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
