[project]
name = "my-ml-project"
version = "0.1.0"
description = "Personal machine learning project for training purposes. "
authors = [
    { name = "Mimmi", email = "mimmi@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "scikit-learn",
    "jupyter",
    "matplotlib",
    "seaborn",
    "ipykernel (>=6.30.1,<7.0.0)",
    "selenium (>=4.35.0,<5.0.0)",
    "scrapy (>=2.13.3,<3.0.0)",
    "scrapy-splash (>=0.11.1,<0.12.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
